帮助页面初步建立

--- a/src/main/resources/templates/user/userindex.html
+++ b/src/main/resources/templates/user/userindex.html
@@ -66,7 +66,7 @@
         </div>
         <div class="nav-item dropdown d-flex">
             <a class="nav-link link-light dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${username}">
+               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${uname}">
                 用户
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
