--- a/src/main/resources/templates/login/loginpage.html
+++ b/src/main/resources/templates/login/loginpage.html
@@ -142,7 +142,7 @@
                     })
                     .then(response =>{
                         if(response.data.result){
-                            window.open('http://localhost:8080/ind/indextest?username='+response.data.resMsg)
+                            window.open('http://localhost:8080/ind/userindex?username='+response.data.resMsg)
                         }else{
                             alert(response.data.errMsg);
                         }
