--- a/src/main/resources/templates/admin/adminindex.html
+++ b/src/main/resources/templates/admin/adminindex.html
@@ -66,7 +66,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="#"><span class="bi-people"></span> 反馈</a></li>
-                <li><a class="dropdown-item" href="#"><span class="bi-power"></span> 退出登录</a></li>
+                <li><a class="dropdown-item" href="http://localhost:8080/login/logout"><span class="bi-power"></span> 退出登录</a></li>
             </ul>
         </div>
     </div>
