--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>小山屋论坛-首页</title>
+    <title>404</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
@@ -37,46 +37,52 @@
     <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
 
     <style>
-        #mainpart{
-            margin-top: 50px;
+        #maincard{
+            margin-top: 10px;
         }
     </style>
-
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
         <a class="navbar-brand" href="#">
             小山屋论坛</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </div>
+        <div id="he-plugin-simple"></div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-balloon-heart"></span>
-                        漂流瓶</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-chat-left-quote"></span>
-                        风纪委员会</a>
-                </li>
-            </ul>
-
-        </div>
-        <div class="nav-item dropdown d-flex">
-            <a class="nav-link link-light dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${uname}">
-                用户
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#"><span class="bi-person"></span> 个人中心</a></li>
-                <li><a class="dropdown-item" href="#"><span class="bi-people"></span> 反馈</a></li>
-                <li><a class="dropdown-item" href="#"><span class="bi-power"></span> 退出登录</a></li>
-            </ul>
-        </div>
     </div>
 </nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3">
+
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="row g-0">
+
+                        <img src = 'https://s3.bmp.ovh/imgs/2022/02/c1c0272b79d6655e.png' class="card-img-top">
+
+
+                        <div class="card-body">
+                            <h5 class="card-title">404</h5>
+                            <p class="card-text">无法在服务器上找到您想访问的页面，您可以检查自己的输入是否正确</p>
+                            <p class="card-text"><small class="text-muted">小山屋论坛</small></p>
+                            <a href="http://localhost:8080/login/tologin" class="btn btn-primary"><span class="bi-person"></span> 带我去登录页面</a>
+                            <a href="#" class="btn btn-primary"><span class="bi-house"></span> 带我去首页</a>
+                        </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+
+        </div>
+    </div>
+</div>
 <footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
     <div class="container">
         <ul class="bd-footer-links ps-0 mb-3">
