--- a/src/main/resources/templates/user/usermng.html
+++ b/src/main/resources/templates/user/usermng.html
@@ -94,7 +94,9 @@
             <button type="button" class="list-group-item list-group-item-action">我的帖子</button>
             <button type="button" class="list-group-item list-group-item-action">我的主题</button>
             <button type="button" class="list-group-item list-group-item-action">我的收藏</button>
-            <button type="button" class="list-group-item list-group-item-action">我的信息</button>
+            <button type="button" class="list-group-item list-group-item-action" onclick="window.location.href='http://localhost:8080/user/userinfo'">
+                我的信息
+            </button>
             <button type="button" class="list-group-item list-group-item-action">修改密码</button>
         </div>
     </div>
