--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>欢迎来到小山屋论坛</title>
+    <title>小山屋论坛-首页</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
@@ -12,6 +12,9 @@
 
     <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
     <script src="js/bootstrap.bundle.min.js"></script>
+
+    <!--  vue.js  -->
+    <script src="js/vue.js"></script>
 
     <!--  bootstrap5 图标库-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -27,8 +30,71 @@
     <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
 
+    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+    <script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
+
+    <!--  和风天气  -->
+    <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
+
+    <style>
+        #mainpart{
+            margin-top: 20px;
+        }
+    </style>
+
 </head>
 <body>
-    <h1 th:text="${'Welcome '+uname}"></h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">
+            小山屋论坛</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-balloon-heart"></span>
+                        漂流瓶</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#"><span class="bi-chat-left-quote"></span>
+                        风纪委员会</a>
+                </li>
+            </ul>
+
+        </div>
+        <div class="nav-item dropdown d-flex">
+            <a class="nav-link link-light dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+               role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${user.getUsername()}">
+                用户
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="/user/tousercenter"><span class="bi-people"></span> 个人中心</a></li>
+                <li><a class="dropdown-item" href="#"><span class="bi-people"></span> 反馈</a></li>
+                <li><a class="dropdown-item" href="/user/logout"><span class="bi-power"></span> 退出登录</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-8">
+
+        </div>
+        <div class="col-sm-4">
+
+        </div>
+    </div>
+</div>
+<footer class="bd-footer p-3 p-md-5 mt-5 bg-light text-center text-sm-start">
+    <div class="container">
+        <ul class="bd-footer-links ps-0 mb-3">
+            <li class="d-inline-block" ><a href="https://github.com/bluebonnet27/xiaoshanwu">GitHub</a></li>
+        </ul>
+        <p class="mb-0">小山屋论坛 Copyright© 2022 All Rights Reserved. </p>
+        <p class="mb-0">当前版本 v0.1。</p>
+    </div>
+</footer>
 </body>
 </html>
