--- a/src/main/resources/templates/mainpage/defaultandnew.html
+++ b/src/main/resources/templates/mainpage/defaultandnew.html
@@ -108,13 +108,13 @@
         <div class="col-sm-8">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active">默认</a>
+                    <a class="nav-link" href="http://localhost:8080/ind/userindex">默认</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">热门</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="http://localhost:8080/article/defaultnew">最新</a>
+                    <a class="nav-link active">最新</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">消灭零回复</a>
@@ -135,7 +135,9 @@
                 <ul class="pagination">
                     <li th:each="i : ${#numbers.sequence(1,pages.getTotalPages())}"
                         th:class="${pages.getNumber() + 1 != i}?'page-item':'page-item active'">
-                        <a class="page-link" href="#" th:text="${i}">
+                        <a class="page-link"
+                           th:href="@{defaultnew(page=${i},limit=${pages.getSize()})}"
+                           th:text="${i}">
                             Previous</a>
                     </li>
                 </ul>
