--- a/src/main/resources/templates/user/usermng.html
+++ b/src/main/resources/templates/user/usermng.html
@@ -89,7 +89,7 @@
         <h3><span class="bi-person"></span> 我的</h3>
         <div class="list-group">
             <button type="button" class="list-group-item list-group-item-action active"
-                    onclick="window.location.href='/ind/userindex'">
+                    onclick="window.location.href='/user/tousercenter'">
                 我的数据</button>
             <button type="button" class="list-group-item list-group-item-action">我的帖子</button>
             <button type="button" class="list-group-item list-group-item-action">我的主题</button>
@@ -97,7 +97,9 @@
         </div>
         <h3><span class="bi-safe"></span> 安全</h3>
         <div class="list-group">
-            <button type="button" class="list-group-item list-group-item-action">我的信息</button>
+            <button type="button" class="list-group-item list-group-item-action"
+                    onclick="window.location.href='/user/userinfo'">
+                我的信息</button>
             <button type="button" class="list-group-item list-group-item-action"
                     onclick="window.location.href='/user/tochangepwd'">
                 修改密码</button>
