--- a/src/main/resources/templates/login/loginpage.html
+++ b/src/main/resources/templates/login/loginpage.html
@@ -40,10 +40,14 @@
         #mainpart{
             margin-top: 50px;
         }
+        #mainbody{
+            background-image: url("https://s3.bmp.ovh/imgs/2022/03/07ca2075685f0fd8.png");
+            background-size:100% 100%;
+        }
     </style>
 
 </head>
-<body>
+<body id="mainbody">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#">
