--- a/src/main/resources/templates/mainpage/defaultandnew.html
+++ b/src/main/resources/templates/mainpage/defaultandnew.html
@@ -51,10 +51,14 @@
             margin-top: 5px;
             margin-bottom: 5px;
         }
+        #mainbody{
+            background-image: url("https://s3.bmp.ovh/imgs/2022/03/07ca2075685f0fd8.png");
+            background-size:100% 100%;
+        }
     </style>
 
 </head>
-<body>
+<body id="mainbody">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#">
