--- a/src/main/resources/templates/user/userchangeemailpage.html
+++ b/src/main/resources/templates/user/userchangeemailpage.html
@@ -88,8 +88,8 @@
         <div class="col-3">
             <h3><span class="bi-person"></span> 我的</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active"
-                        onclick="window.location.href='/ind/userindex'">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/tousercenter'">
                     我的数据</button>
                 <button type="button" class="list-group-item list-group-item-action">我的帖子</button>
                 <button type="button" class="list-group-item list-group-item-action">我的主题</button>
@@ -101,7 +101,7 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tochangepwd'">
                     修改密码</button>
-                <button type="button" class="list-group-item list-group-item-action"
+                <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='/user/tochangeemail'">
                     修改邮箱</button>
             </div>
