--- a/src/main/resources/templates/user/userinfopage.html
+++ b/src/main/resources/templates/user/userinfopage.html
@@ -88,8 +88,8 @@
         <div class="col-3">
             <h3><span class="bi-person"></span> 我的</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active"
-                        onclick="window.location.href='/ind/userindex'">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='/user/tousercenter'">
                     我的数据</button>
                 <button type="button" class="list-group-item list-group-item-action">我的帖子</button>
                 <button type="button" class="list-group-item list-group-item-action">我的主题</button>
@@ -97,7 +97,7 @@
             </div>
             <h3><span class="bi-safe"></span> 安全</h3>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action">我的信息</button>
+                <button type="button" class="list-group-item list-group-item-action active">我的信息</button>
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='/user/tochangepwd'">
                     修改密码</button>
